--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <script type="text/javascript" src="index.js"></script>
 <body>
-    
+   <canvas id="gameCanvas" width="800" height="600"></canvas> 
 </body>
 </html>
